# sync-fy

./: .dockerignore  .gitignore  CMakeLists.txt  Doxyfile  README.md  check-ports.sh  classDiagram.asta  clear-ports.sh  conanfile.txt  docker-compose.yaml  docker-compose.yml  dockerfile
.devcontainer/: devcontainer.json
client/: CMakeLists.txt  main.cpp
client/includes/: client.hpp  clientCommandHandler.hpp  clientMessageHandler.hpp  clientSocket.hpp  fileWatcher.hpp  recoverySocket.hpp  socket.hpp
client/includes/cli/: cli.hpp  cliCommandHandler.hpp  cliMessageHandler.hpp  clientCommandHandler.hpp  commandHandler.hpp  commandMessager.hpp  messageHandler.hpp
client/includes/fileManager/: fileManager.hpp
client/includes/fileWatcher/: fileWatcher.hpp
client/includes/localMonitor/: fileWatcher.hpp  localMonitor.hpp  messageHandler.hpp
client/includes/serverMonitor/: messageHandler.hpp  serverMonitor.hpp
client/includes/socket/: socket.hpp
client/src/: cli.cpp  clientCommandHandler.cpp  clientSocket.cpp  commandHandler.cpp  main.cpp
client/src/cli/: cli.cpp  cliMessageHandler.cpp  clientCommandHandler.cpp  commandHandler.cpp  commandMessager.cpp  messageHandler.cpp
client/src/fileManager/: fileManager.cpp
client/src/fileWatcher/: fileWatcher.cpp
client/src/localMonitor/: fileWatcher.cpp  localMonitor.cpp  messageHandler.cpp
client/src/serverMonitor/: messageHandler.cpp  serverMonitor.cpp
common/: CMakeLists.txt
common/include/: constants.hpp
common/include/atomic/: atomicQueue.hpp  atomicVector.hpp
common/include/database/: Database.h  create_table.sql
common/include/datetime/: DateTime.h  dateTime.hpp
common/include/filesystem/: directory.hpp  file.cpp  file.hpp  fileChange.hpp  fileChunk.hpp
common/include/messages/: fileMessageHandler.hpp  message.hpp  messageHandler.hpp  messageReciever.hpp  messageSender.hpp  messageTypes.hpp
common/include/models/: User.h  baseModel.hpp  connectedIps.hpp  connectedNodes.hpp  deleteFile.hpp  initBackupData.hpp  initReceiveFile.hpp  initRecieveFile.hpp  initSendFile.hpp  listFiles.hpp  login.hpp  serverId.hpp
common/include/socket/: clientSocket.hpp  serverSocket.hpp  tcpSocket.hpp
common/src/: database.cpp
scripts/: build.sh  run-client.sh  run-server.sh
server/: CMakeLists.txt  main.cpp
server/includes/: backupMessageHandler.hpp  backupState.hpp  commandMessageHandler.hpp  connectionHandler.hpp  fileChangesQueue.hpp  recoverySocket.hpp  serverMessageHandler.hpp  serverSocket.hpp  userConnection.hpp
server/includes/backup/: backupState.hpp  bullyElection.hpp  electionMessageHandler.hpp  primaryMonitor.hpp
server/includes/backup/data/: primaryDataMonitor.hpp
server/includes/clientMonitor/: messageHandler.hpp
server/includes/command/: messageHandler.hpp
server/includes/localMonitor/: localMonitor.hpp
server/includes/primary/backupConnection/: backupConnection.hpp  backupConnectionHandler.hpp  backupDataMonitor.hpp  backupMonitor.hpp  backupState.hpp  connectionHandler.hpp
server/includes/primary/clientConnection/: clientConnectionHandler.hpp  connectionHandler.hpp  userConnection.hpp
server/includes/primary/clientMonitor/: messageHandler.hpp
server/includes/primary/command/: messageHandler.hpp
server/includes/primary/localMonitor/: localMonitor.hpp
server/socket/: serverSocket.hpp  socket.hpp
server/src/: commandMessageHandler.cpp  connectionHandler.cpp  main.cpp  serverSocket.cpp
server/src/clientMonitor/: messageHandler.cpp
server/src/command/: messageHandler.cpp
server/src/localMonitor/: localMonitor.cpp
server/src/primary/: connectionHandler.cpp
server/src/primary/clientConnection/: clientConnectionHandler.cpp  connectionHandler.cpp
server/src/primary/clientMonitor/: messageHandler.cpp
server/src/primary/command/: messageHandler.cpp
server/src/primary/localMonitor/: localMonitor.cpp
tests/scripts/: run-client.sh
